--- a/fresh_tomatoes.html
+++ b/fresh_tomatoes.html
@@ -107,16 +107,19 @@
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="36mnx8dBbGE" data-toggle="modal" data-target="#trailer">
     <img src="http://vignette4.wikia.nocookie.net/jamesbond/images/d/df/Casino_Royale_poster.jpeg/revision/latest?cb=20120329172248" width="220" height="342">
     <h2>Casino Royale</h2>
+    <p>Bond got betrayed...</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="-t3t47w2z8I" data-toggle="modal" data-target="#trailer">
     <img src="http://iv1.lisimg.com/image/3167762/600full-hana-and-alice-poster.jpg" width="220" height="342">
     <h2>花與愛麗絲</h2>
+    <p>Alice and Hana are best friends. But they fell in love with the same guy...</p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="PsD0NpFSADM" data-toggle="modal" data-target="#trailer">
     <img src="https://upload.wikimedia.org/wikipedia/en/d/d1/Five_hundred_days_of_summer.jpg" width="220" height="342">
     <h2>(500) Days of Summer</h2>
+    <p>On January 8, Tom Hansen meets Summer Finn, his boss's new assistant...</p>
 </div>
 
     </div>
